# rustiples

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: tests.yml
assets/sprites/: cursor.xcf
src/: app_state.rs  lib.rs  main.rs
src/buttons/: components.rs  events.rs  mod.rs  systems.rs
src/camera/: mod.rs
src/cursor/: components.rs  mod.rs  systems.rs
src/fps/: components.rs  mod.rs  systems.rs
src/game_grid/: components.rs  mod.rs  systems.rs
src/game_grid/components/: axe.rs  castle.rs  entry.rs  graph_node.rs  grid.rs  grid_entity.rs  grid_entity_config.rs  grid_entity_type.rs  grid_node.rs  grid_position.rs  hero.rs  mineral.rs  mod.rs  movement_action.rs  mutation.rs  pathfinding_params.rs  traversal_cost.rs  tree.rs  world_position.rs
src/game_grid/systems/: ai.rs  controls.rs  exec_movement.rs  generators.rs  grid.rs  grid_click.rs  grid_entities_utils.rs  grid_entity_factory.rs  grid_generator.rs  grid_loader.rs  mod.rs  position_allocator.rs
src/game_grid/systems/ai/: action.rs  find_path_action.rs  mod.rs  mutation.rs  pathfinding.rs  pathfinding_params.rs  pickup_axe_action.rs  state.rs  strategic_analysis.rs
src/game_grid/systems/position/: mod.rs  position_alocator.rs  world_position.rs
src/legacy_game_grid/components/: graph_node.rs  mountain.rs  tree.rs
src/legacy_game_grid/systems/: game_buttons.rs
src/legacy_game_grid/systems/ai/: find_path_action.rs  state.rs
src/main_menu/: mod.rs
src/world_info/: components.rs  mod.rs  systems.rs
tests/: cursor_tests.rs  fps_tests.rs
(+6 files in other folders)
