[package]
name = "rustilples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
lazy_static = "1.4.0"
rand = "0.8.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
